# python-scraper-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: app.py
examples/: demo.py  quickstart.py
scraper/: client.py  engine.py  parser.py
