[project]
name = "scraper-api"
version = "1.0.0"
description = "Async web scraper API — FastAPI, httpx, BeautifulSoup, rate limiting, caching, job queue, structured extraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
